[gd_scene load_steps=43 format=2]

[ext_resource path="res://UI/side_bar/69816-1.png" type="Texture" id=1]
[ext_resource path="res://UI/side_bar/69812-2.png" type="Texture" id=2]
[ext_resource path="res://UI/side_bar.gd" type="Script" id=3]
[ext_resource path="res://UI/side_bar/69825-2.png" type="Texture" id=4]
[ext_resource path="res://UI/side_bar/69826-2.png" type="Texture" id=5]
[ext_resource path="res://UI/side_bar/69826-4.png" type="Texture" id=6]
[ext_resource path="res://UI/side_bar/69825-4.png" type="Texture" id=7]
[ext_resource path="res://UI/side_bar/69826-1.png" type="Texture" id=8]
[ext_resource path="res://UI/side_bar/69826-3.png" type="Texture" id=9]
[ext_resource path="res://UI/side_bar/69812-3.png" type="Texture" id=10]
[ext_resource path="res://UI/side_bar/69812-4.png" type="Texture" id=11]
[ext_resource path="res://UI/side_bar/69825-3.png" type="Texture" id=12]
[ext_resource path="res://UI/side_bar/69812-1.png" type="Texture" id=13]
[ext_resource path="res://UI/side_bar/69816-4.png" type="Texture" id=14]
[ext_resource path="res://UI/side_bar/69828-1.png" type="Texture" id=15]
[ext_resource path="res://UI/side_bar/69825-1.png" type="Texture" id=16]
[ext_resource path="res://UI/side_bar/69828-2.png" type="Texture" id=17]
[ext_resource path="res://UI/side_bar/69816-3.png" type="Texture" id=18]
[ext_resource path="res://UI/side_bar/69828-3.png" type="Texture" id=19]
[ext_resource path="res://UI/side_bar/69828-4.png" type="Texture" id=20]
[ext_resource path="res://UI/side_bar/69827-3.png" type="Texture" id=21]
[ext_resource path="res://UI/side_bar/69827-1.png" type="Texture" id=22]
[ext_resource path="res://UI/side_bar/69827-2.png" type="Texture" id=23]
[ext_resource path="res://UI/side_bar/69827-4.png" type="Texture" id=24]
[ext_resource path="res://UI/side_bar/69816-2.png" type="Texture" id=25]
[ext_resource path="res://UI/side_bar/69878-4.png" type="Texture" id=26]
[ext_resource path="res://UI/side_bar/69878-1.png" type="Texture" id=27]
[ext_resource path="res://UI/side_bar/69878-3.png" type="Texture" id=28]
[ext_resource path="res://UI/side_bar/69878-2.png" type="Texture" id=29]

[sub_resource type="InputEventKey" id=1]
scancode = 16777244

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 16777245

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
scancode = 16777246

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 16777247

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
scancode = 16777248

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventKey" id=11]
scancode = 16777249

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="side_bar" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="VBoxContainer"]
margin_right = 52.0
margin_bottom = 30.0
hint_tooltip = "人物信息"
shortcut = SubResource( 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 52.0
margin_bottom = 64.0
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 4 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 25 )
texture_disabled = ExtResource( 14 )
stretch_mode = 5

[node name="Button3" type="TextureButton" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 52.0
margin_bottom = 98.0
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 6 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 7 )
stretch_mode = 5

[node name="Button4" type="TextureButton" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 52.0
margin_bottom = 132.0
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 8 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 11 )
stretch_mode = 5

[node name="Button5" type="TextureButton" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 52.0
margin_bottom = 166.0
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 10 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 20 )
stretch_mode = 5

[node name="Button6" type="TextureButton" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 52.0
margin_bottom = 200.0
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 12 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
texture_disabled = ExtResource( 24 )
stretch_mode = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -32, -32 )
frames = SubResource( 13 )
playing = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="VBoxContainer/Button6" to="." method="_on_Button6_pressed"]
